<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back8"
    tools:context=".rating2">

    <TextView
        android:id="@+id/rateID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="Rate Yourself"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/rate3"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rateID"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="63dp"
        android:text="@string/R3"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="131dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/R3_1" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:text="@string/R3_2" />
    </RadioGroup>

    <TextView
        android:id="@+id/handPosture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="135dp"
        android:text="@string/R5"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/commentEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="409dp"
        android:layout_marginBottom="220dp"
        android:ems="10"
        android:hint="Type your Comment here.."
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="151dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="382dp"
        android:layout_marginEnd="217dp"
        android:text="@string/R6"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/postureRG"
        android:layout_width="204dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="174dp">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/R5_2" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:text="@string/R5_1" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="11dp"
            android:text="@string/R5_3" />

    </RadioGroup>

    <Button
        android:id="@+id/rate2SubmitBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:text="Submit"
        app:backgroundTint="#3F51B5" />

</RelativeLayout>