<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alertScreen"
    android:background="@drawable/back12">



    <TextView
        android:id="@+id/alertTV"
        android:layout_width="381dp"
        android:layout_height="35dp"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="0dp"
        android:text="@string/alertMsg"
        android:textSize="15dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/image8" />

    <RadioGroup
        android:id="@+id/alertTime"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alertTV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="133dp">

        <RadioButton
            android:id="@+id/startRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/startRB" />

        <RadioButton
            android:id="@+id/oneMinRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/OneMin" />


        <RadioButton
            android:id="@+id/twoMinRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/TwoMin" />

        <RadioButton
            android:id="@+id/fiveMinRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/FiveMin" />

    </RadioGroup>

</RelativeLayout>